--- a/FilterSample/Base.lproj/Main.storyboard
+++ b/FilterSample/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="chappet.png" translatesAutoresizingMaskIntoConstraints="NO" id="BeQ-xZ-jTM">
-                                <rect key="frame" x="67" y="392" width="240" height="236"/>
+                                <rect key="frame" x="67" y="486" width="240" height="142"/>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="12000" minValue="0.0" maxValue="16000" translatesAutoresizingMaskIntoConstraints="NO" id="Xtn-aT-UIf">
                                 <rect key="frame" x="31" y="280" width="313" height="31"/>
@@ -68,20 +68,42 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="2400" translatesAutoresizingMaskIntoConstraints="NO" id="tmH-Vr-SZn">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="6000" translatesAutoresizingMaskIntoConstraints="NO" id="tmH-Vr-SZn">
                                 <rect key="frame" x="31" y="143" width="313" height="31"/>
                                 <connections>
                                     <action selector="EffectSlider1Change:" destination="BYZ-38-t0r" eventType="valueChanged" id="Uom-ri-3Pb"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kGa-nU-tpQ">
-                                <rect key="frame" x="153" y="44" width="68" height="42"/>
+                                <rect key="frame" x="139" y="44" width="71" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Play"/>
+                                <state key="normal" title="Convert"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWf-Tt-Azf">
+                                <rect key="frame" x="33" y="44" width="71" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Analyze"/>
                                 <connections>
-                                    <action selector="PlayButtonTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tyx-z0-GqM"/>
+                                    <action selector="AnalyzeButtonDown:" destination="BYZ-38-t0r" eventType="touchDown" id="jSp-kB-HrM"/>
+                                    <action selector="AnalyzeButtonUp:" destination="BYZ-38-t0r" eventType="touchUpOutside" id="Ulj-mY-mCE"/>
+                                    <action selector="AnalyzeButtonUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zxd-8I-ck2"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XV-Gp-rIV">
+                                <rect key="frame" x="244" y="44" width="111" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Play Sample"/>
+                                <connections>
+                                    <action selector="PlayButtonTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y2c-ee-Hyj"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nf4-iF-poY" customClass="WaveformVisualizerView" customModule="FilterSample" customModuleProvider="target">
+                                <rect key="frame" x="38" y="338" width="298" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -93,6 +115,7 @@
                         <outlet property="EffectSlider1" destination="tmH-Vr-SZn" id="GJ5-66-qL1"/>
                         <outlet property="EffectSlider2" destination="fsS-ah-29h" id="0JP-h7-sBj"/>
                         <outlet property="EffectSlider3" destination="Xtn-aT-UIf" id="T0w-Ou-oy4"/>
+                        <outlet property="WaveformVisualizerSubview" destination="nf4-iF-poY" id="LEP-38-tZh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
